# kiln

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: launch.json
.codex/: config.toml
.github/workflows/: pages.yml  release.yml
apps/desktop/: index.html  package.json  sea-config.json  tsconfig.json  tsup.binary.config.ts  tsup.config.ts  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: build-binary.mjs  dev.mjs
apps/desktop/sidecar/: agent-access-api.test.ts  agent-access.test.ts  agent-access.ts  api.test.ts  api.ts  binary.ts  main.ts  projects.test.ts  projects.ts  sea-guard.ts  server.ts
apps/desktop/src/: App.tsx  index.css  theme.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ArtifactsPanel.tsx  Board.tsx  ChatPanel.tsx  ContextInspector.tsx  DocumentView.tsx  Editor.tsx  FeatureTree.tsx  GraphPanel.tsx  ProjectSwitcher.tsx  ProposalQueue.tsx  PulseView.tsx  QuickOpen.tsx  RevisionDiff.tsx  RightPanel.tsx  SettingsView.tsx  TopBar.tsx  UpdateBanner.tsx  VerificationPanel.tsx  XRayView.tsx
apps/desktop/src/lib/: agent-access.test.ts  agent-access.ts  client.ts  clipboard.ts  context-inspect.test.ts  context-inspect.ts  criticality.test.ts  criticality.ts  diff.test.ts  (+26 more)
docs/: CONNECTING.md  PRD.md  authoring-methodology.md  blueprint.md  requirements.md  work-orders.md
skills/kiln-execute/: SKILL.md
skills/kiln-survey/: SKILL.md
website/: docs.html  index.html
(+12 files in other folders)
